--- a/index.html
+++ b/index.html
@@ -3,41 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Cover Letter</title>
 </head>
 <body>
-    <h1>Tanzeel Qamar</h1>
-   <h6>
-    Skyline Apartment, sec11/A, North Karachi, Karachi, Pakistan.
-   </h6>
-   <h4>Objective</h4>
-   <p>I am a final-year Inorganic Chemistry student at the University of Karachi. Alongside my studies, I am learning
-    web development from GIAIC to develop technical skills in programming and design. I am passionate about
-    combining my chemistry knowledge with technology to work on innovative projects and contribute to
-    meaningful solutions in both scientific and digital fields</p>
-    <h4>Education</h4>
-    <ul>
-        <li><b>Matriculation with A+ grade [2017 - 2018]</b><br />
-            SHS Schooling System</li>
-        <li><b>Intermediate with A grade [2019 - 2020]</b><br />
-            Government Degree Science and Commerce College Gulshan-e-Iqbal Block 7
-            Pre-Medical.</li>
-        <li><b>Bachelors [2020 - 2023]</b><br/>
-        Chemistry<br/>
-            University Of Karachi</li>
-        <li><b>Masters [2023 - 2024]</b><br/>
-            Inorganic Chemistry<br/>
-            University Of Karachi</li>
-    </ul>
-    <h4>Experience</h4>
-    <h6>1-Jan-2024 To 5-Mar-2024</h6>
-    <h5>Assisstant Manager at ABC Company </h5>
-    <p>This is the place where I used my theoretical knowledge into practical magic.</p>
-    <h4>Awards and Acknowledgements</h4>
-    <ul>
-        <li>Certifications: ESL and CIT from Sae Ban Institute </li>
-        <li>Attended workshop for “Roadmap For Chemists
-            In HSE”.</li>
-    </ul>
+  <h1 style="text-align: center"><u>Customer Service Cover Letter</u></h1>
+  <p><b>January 5th-2025</b><br/><br/>
+Mr. XYZ, <br/>
+ABC pvt. ltd.,<br/>
+ABC area,<br/>
++92 2222299999,<br/>
+xyz@gmail.com. <br/><br/>
+<b>Dear Mr. XYZ,</b><br/><br/>
+I am writing to you regarding your company's Customer Service Representative opening. I've been working as a Telephone Sales Executive at Telemarketer Auto Insurance USA for more than 2 years and have developed impeccable phone manners and an ability to deal with agitated or distressed customers. I'm accustomed to working on multiple projects simultaneously, and I can offer new ideas to help your company grow and surpass all goals and objectives.<br/><br/>
+My relevant experience includes the following highlights:<br/>
+<ul>
+    <li>Making 60 cold calls a day to businessess and private individuals to solicit sales of goods and services.</li>
+    <li>Implementing a new sales strategy that reduced training expenses by 30% and increased the close ratio by 10% within 3 months.</li>
+    <li>Maintaining an average 95% customer satisfaction rating.</li>
+</ul>
+My experience at Telemarketer Auto Insurance USA has helped me improve my leadership skills, allowed me to gain organizational skills, and provided me with extensive knowledge of how to upsell services and goods to potential clients. I've also worked at Parade Hotel as a Front Desk Clerk, providing information to guests in a 150+ room hotel. Additionally, I trained and supervised 6 new staff members.<br/><br/>
+I'm looking forward to discussing my qualifications with you in more details soon. I feel confident that I fulfill the requirements for your open Customer Service Representative position. Thank you for your time and consideration.<br/><br/>
+Sincerely,<br/><br/>
+<b>Tanzeel Qamar</b>
+</p>
+
 </body>
 </html>
